change behavior of checkbox, add flashMsg when change status and not login, add catch when no result found

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon ./bin/www -e .js,.hbs"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www -e .js,.hbs",
+    "update": "node ./bin/updateMMO.js",
+    "seed": "node ./bin/seed.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
