--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^4.3.0",
+    "connect-mongo": "^4.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -21,6 +21,8 @@
     "hbs": "^4.1.1",
     "http-errors": "^1.8.0",
     "mongoose": "^5.11.19",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
